fixing some errors and  warnings

--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: Outfit;
+    font-family: 'Outfit';
 }
 
 .qr-code-container{
